--- a/src/_styles/mixins/_variables.scss
+++ b/src/_styles/mixins/_variables.scss
@@ -6,8 +6,9 @@ $darkGray: #787871;
 $midGray: #999;
 $lightGray: #ebebeb;
 $lightestGray: #f4f7f8;
-$blue: #053f7a;
-$blueGray: #bbc9c9;
+$blue: #3c4e74;
+$blueGray: #e7eeff;
+$darkBlue: #1c202b;
 
 $mainColor: $blue;
 $link: $mainColor;
