--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -1,2 +1,20 @@
 header.header
-    
+  .container
+    .header__container
+      .header__logo
+        img(src="/images/logp.png")
+      .header__nav    
+        ul.header__list
+          li
+            a home
+          li
+            a programas
+          li
+            a shop
+        ul.header__list
+          li
+            a aguas arriba club
+          li
+            a
+          li
+            a contacto
