--- a/src/_modules/footer/footer.jade
+++ b/src/_modules/footer/footer.jade
@@ -1,1 +1,50 @@
 footer.footer
+  form.footer__form._form
+    .container
+      .row
+        .col-xs-24
+          h2.footer__form__title contáctenos
+        .col-xs-24.col-md-8
+          input._form__input(type="text" placeholder="Nombre")
+        .col-xs-24.col-md-8
+          input._form__input(type="email" placeholder="Email")
+        .col-xs-24.col-md-8
+          input._form__input(type="text" placeholder="País")
+        .col-xs-24
+          textarea._form__textarea(placeholder="Mensaje")
+        .col-xs-24
+          button.footer__form__send-button._form._submit enviar
+  .container
+    .footer__sponsors
+      .footer__sponsor
+        img(src="/images/sponsor/ansilta.png")
+      .footer__sponsor
+        img(src="/images/sponsor/amarok.png")
+      .footer__sponsor
+        img(src="/images/sponsor/pulenta.png")
+      .footer__sponsor
+        img(src="/images/sponsor/rus.png")
+      .footer__sponsor
+        img(src="/images/sponsor/patagonia.png")
+      .footer__sponsor
+        img(src="/images/sponsor/simms.png")
+      .footer__sponsor
+        img(src="/images/sponsor/loop.png")
+  .footer__social
+    .container
+      .footer__wrapper
+        p.footer__dante
+          |Web Site made by 
+          span dante interactive
+        p.footer__copyright 2019 &copy; Aguas Arriba - Todos los derechos reservados.
+        .footer__container
+          ul.footer__social-networks
+            li
+              a(href="#")
+                i.fa.fa-facebook
+            li
+              a(href="#")
+                i.fa.fa-twitter
+            li
+              a(href="#")
+                i.fa.fa-instagram
