--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -1,20 +1,23 @@
-header.header
+header.header.-on-top
   .container
-    .header__container
-      .header__logo
-        img(src="/images/logp.png")
-      .header__nav    
-        ul.header__list
-          li
-            a home
-          li
-            a programas
-          li
-            a shop
-        ul.header__list
-          li
-            a aguas arriba club
-          li
-            a
-          li
-            a contacto
+    .header__wrapper
+      a.header__logo(href="/")
+        img(src="/images/logo.png")
+      .header__container
+        nav.header__nav    
+          ul.header__list
+            li
+              a home
+            li
+              a programas
+            li
+              a shop
+          ul.header__list
+            li
+              a aguas arriba club
+            li
+              a contacto
+      .header__hamburguer
+        span
+        span
+        span
