--- a/src/_layouts/base.jade
+++ b/src/_layouts/base.jade
@@ -36,6 +36,14 @@ body
         script(src= baseUrl + 'scripts/main.js')
         
         script(src="//cdnjs.cloudflare.com/ajax/libs/wow/0.1.12/wow.min.js")
-        script new WOW().init();
 
+        script(src="/scripts/ilightbox.packed.js")
+        script(src="/scripts/jquery.mousewheel.js")
+        script(src="/scripts/jquery.requestAnimationFrame.js")
+
+        script new WOW().init();
+        script $('.tecka-gallery').iLightBox();
+        script $('.patagonia-gallery').iLightBox();
+        script $('.behety-gallery').iLightBox();
+        script $('.golden-gallery').iLightBox();
 </html>
