--- a/src/_modules/header/header.scss
+++ b/src/_modules/header/header.scss
@@ -2,38 +2,134 @@
 
     $h: &;
 
-
-    position: fixed;
+    position: absolute;
     top: 0;
-    height: 10vh;
-
+    width: 100%;
+    padding: 20px 0;
+    
     @include mq(md) {
-        position: absolute;
+    }
+    
+    &__wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        @include mq(md) {
+            display: block;
+        }
     }
 
     &__container {
-        position: relative;
-    }
+        display: flex;
+        align-items: center;
+        
+        @include mq(md) {
+            height: 150px;
 
+        }
+    }
+    
     &__logo {
+        z-index: 20;
+        width: 40%;
+
+        @include mq(md) {
+            height: 150px;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            width: auto;
+
+        }
+        
+        img {
+            width: 100%;
+            height: auto;
+
+            @include mq(md) {
+                height: 100%;
+                width: auto;
+            }
+        }
+    }
+    
+    &__nav {
+        @include trans;
         position: absolute;
+        opacity: 0;
+        top: 0;
+        left: 0;
+        right: 0;
+        background: $white;
+        transform: translateX(-100%);
+        width: 100%;
+        height: 100vh;
+        bottom: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        z-index: 1000;
+
+        @include mq(md) {
+            width: 100%;
+            opacity: 1;
+            transform: translateX(0);
+            height: auto;
+            position: static;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            background: transparent;
+        }
     }
 
-    &__nav {
+    &__list {
+        padding-left: 50px;
+        @include mq(md) {
+            display: flex;
+            align-items: center;
+        }
 
+        li {
+            &:not(:last-child) {
+                margin-bottom: 20px;
+                
+                @include mq(md) {
+                    margin-bottom: 0;
+                    margin-right: 40px;
+                }
+            }
+        }
+
+        a {
+            text-transform: uppercase;
+            font-weight: 300;
+            color: $black;
+            font-size: 26px;
+            
+            @include mq(md) {
+                font-size: 20px;
+                color: $white;
+                font-weight: 600;
+            }
+        }
     }
 
     &__hamburguer {
         cursor: pointer;
         width: 25px;
         height: 25px;
-        margin: auto;
-        position: absolute;
-        right: 32px;
-        top: 30px;
+        z-index: 1000;
+        
+        @include mq(md) {
+            display: none;            
+        }
 
         span {
-            background-color: $mainColor;
+            @include trans;
+            background-color: $white;
             border-radius: 2px;
             content: '';
             display: block;
@@ -58,6 +154,10 @@
 
     &.-open {
         #{$h}__hamburguer {
+            span {
+                background-color: $black;
+            }
+
             span:nth-child(1) {
                 animation:inT 0.6s $easing forwards;
             }
@@ -70,7 +170,9 @@
         }
 
         #{$h}__nav {
-
+            transform: translateX(0);
+            opacity: 1;
+            overflow: visible;
         }
     }
 }
