--- a/src/_styles/_pages.scss
+++ b/src/_styles/_pages.scss
@@ -1,1 +1,5 @@
 @import './pages/home';
+@import './pages/programas';
+@import './pages/club';
+@import './pages/travel';
+@import './pages/agradecimiento';
