--- a/src/_styles/pages/_home.scss
+++ b/src/_styles/pages/_home.scss
@@ -1,3 +1,372 @@
 .home {
+  overflow: hidden;
+
+  &__hero {
+    position: relative;
+    background: $blueGray;
     
+    &__background {
+      overflow: hidden;
+      z-index: 1;
+      position: absolute;
+      
+      @include mq(md) {
+        width: 100%;
+      }
+
+      &:after {
+        content: '';
+        position: absolute;
+        background: linear-gradient(to bottom, transparentize($blue, .3), transparentize($blue, 1));
+        left: 0;
+        right: 0;
+        height: 50%;
+        mix-blend-mode: multiply;
+      }
+
+      img {
+        width: auto;
+        height: 50vh;
+
+        @include mq(md) {
+          width: 100%;
+          height: auto;
+        }
+      }
+    }
+
+    &__container {
+      padding-top: 200px;
+      position: relative;
+      z-index: 2;
+
+      @include mq(md) {
+        padding-bottom: 90px;
+        padding-top: 250px;
+      }
+      // position: ;
+      // top: 150px;
+
+      
+      // @include mq(md) {
+      //   top: 220px;
+      //   width: 100%;
+      // }
+    }
+
+    &__wrapper {
+      height: 300px;      
+      width: 90%;
+      margin-left: auto;
+      margin-right: auto;
+
+      @include mq(md) {
+        width: 100%;
+        position: relative;
+        height: 380px;
+      }
+    }
+
+    &__chapters-button {
+      background: $blue;
+      display: flex;
+      padding: 20px 30px;
+      align-items: center;
+      justify-content: center;
+      
+      @include mq(md) {
+        justify-content: flex-start;
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
+      span {
+        display: block;
+        border-left: 2px solid $white;
+        border-bottom: 2px solid $white;
+        transform: rotate(45deg);
+        width: 20px;
+        height: 20px;
+      }
+
+      p {
+        color: $white;
+        text-transform: uppercase;
+        font-weight: 600;
+        margin: 0;
+        font-size: 12px;
+        margin-left: 20px;
+      }
+      
+      br {
+        display: none;
+
+        @include mq(md) {
+          display: block;
+        }
+      }
+    }
+
+    &__video {
+      border: 5px solid $white;
+      padding-bottom: 200px;
+      overflow: hidden;
+      height: 0;
+      margin-bottom: 20px;
+      
+      @include mq(md) {
+        margin-bottom: 0;
+        top: 0;
+        position: absolute;
+        padding-bottom: 370px;
+        width: 600px;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+      iframe {
+        width: 100%;
+        height: 200px;
+
+        @include mq(md) {
+          height: 370px;
+
+        }
+      }
+    }
+  }
+
+  &__about {
+    background: $blueGray;
+    position: relative;
+
+    &__container {
+      @include mq(md) {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 0;
+        right: 0;
+        margin: auto;
+      }
+    }
+
+    &__image {
+      margin-left: auto;
+
+      @include mq(md) {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        bottom: 0;
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+
+        @include mq(md) {
+          height: auto;
+          width: 55%;
+        }
+      }
+    }
+
+    &__title {
+      margin-bottom: 60px;
+      margin-top: 60px;
+      font-size: 22px;
+      line-height: 1.6;
+      font-weight: 600;
+    }
+
+    &__text {
+      margin-top: 0;
+      margin-bottom: 20px;
+
+      &:last-child {
+        margin-bottom: 120px;
+      }
+    }
+  }
+
+  &__programas {
+    position: relative;
+    height: 450px;
+    background-color: $blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    &:after {
+      content: '';
+      mix-blend-mode: overlay;
+      background: url("/images/home/cta-programa.jpg") no-repeat center bottom / cover;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      opacity: .3;
+    }
+
+    &__title {
+      margin-top: 0;
+      margin-bottom: 60px;
+      text-align: center;
+      text-transform: uppercase;
+      color: $white;
+      font-size: 32px;
+
+      span {
+        font-weight: 600;
+      }
+
+      br {
+        @include mq(md) {
+          display: none;
+        }
+      }
+    }
+
+    &__button {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 310px;
+      padding: 15px 40px;
+      font-weight: 600;
+      color: $white;
+      text-transform: uppercase;
+      border: 1px solid $white;
+    }
+  }
+
+  &__shop {
+    
+    &__column {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 40px 0;
+      
+      @include mq(md) {
+        padding: 60px 0;
+        height: 500px;
+        justify-content: flex-start;
+      }
+    }
+
+    &__container {
+      
+      @include mq(md) {
+        width: 100%;
+
+      }
+    }
+
+    &__title {
+      font-size: 45px;
+      text-transform: uppercase;
+      font-weight: 300;
+      margin-bottom: 20px;
+      color: $blue;
+      text-align: center;
+
+      @include mq(md) {
+        text-align: left;
+      }
+
+      span {
+        font-weight: 600;
+      }
+    }
+
+    &__button {
+      text-align: center;
+      border: 1px solid $blue;
+      padding: 15px 0;
+      display: block;
+      text-transform: uppercase;
+      font-weight: 600;
+    }
+
+    &__image {
+      height: 100%;
+      padding: 0 20px;
+
+      img {
+        max-height: 100%;
+        max-width: 100%;
+      }
+    }
+  }
+
+  &__instagram {
+    &__container {
+      display: flex;
+      flex-wrap: wrap;
+      position: relative;
+    }
+
+    &__images {
+      display: flex;
+      width: 100%;
+      flex-wrap: wrap;
+
+      @include mq(md) {
+        width: 83.33%;
+      }
+    }
+
+    &__image {
+      height: 0;
+      overflow: hidden;
+      position: relative;
+      width: 50%;
+      padding-bottom: 50%;
+      
+      @include mq(md) {
+        padding-bottom: 20%;
+        width: 20%;
+      }
+
+      img {
+        position: absolute;
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+
+    &__hashtag {
+      background: $blue;
+      color: $white;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 50%;
+      height: 33.5%;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+
+      @include mq(md) {
+        position: relative;
+        width: 16.66%;
+        height: auto;
+      }
+
+      i {
+        font-size: 50px;
+        margin-bottom: 20px;
+      }
+
+      p {
+        margin: 0;
+      }
+    }
+  }
 }
