--- a/src/_styles/_pages.scss
+++ b/src/_styles/_pages.scss
@@ -2,4 +2,5 @@
 @import './pages/programas';
 @import './pages/club';
 @import './pages/travel';
+@import './pages/tienda';
 @import './pages/agradecimiento';
