--- a/src/tienda/index.jade
+++ b/src/tienda/index.jade
@@ -5,4 +5,96 @@ block config
   - var baseUrl = '../'
 
 block content
-  p tienda page
+  main.tienda
+    section.tienda__hero
+      .tienda__hero__background
+      .tienda__hero__container
+        .tienda__hero__wrapper
+          .tienda__hero__logo
+            img(src="/images/sponsor/ansilta.png")
+          p.tienda__hero__text Estamos orgullosos de recibir a Ansilta como nuevo socio de Aguas Arriba. Esta producción de indumentaria conjunta, es una primera prueba piloto para ARG. Ojalá tengamos el apoyo de todos ustedes para poder llegar a toda Latinoamérica con nuestros productos.
+    section.tienda__productos
+      .container
+        .row
+          .col-xs-24.col-md-12
+            .tienda__productos__wrapper
+              .tienda__productos__logo
+                img(src="/images/shop/polartec.png")
+              .tienda__productos__container-top
+                .tienda__productos__image
+                  img(src="/images/shop/prod-1.png")
+              .tienda__productos__container-bottom
+                .tienda__productos__content
+                  h2.tienda__productos__title camiseta ares
+                  h3.tienda__productos__subtitle Ansilta - Aguas Arriba
+                  p.tienda__productos__text Interior de abrigo medio, pensado para actividades físicas en las que se puede desempeñar como unica prenda o como camiseta interior. Seca rápido. Libertad de movimiento, regulación térmica óptima del cuerpo. Tejido POLARTEC&reg; Power Dry&reg; Midweight.
+                .tienda__productos__group
+                  .tienda__productos__group-container
+                    .tienda__productos__price AR$: 2400
+                    .tienda__productos__price.-dark club: ar$: 1680
+                  .tienda__productos__group-container
+                    .tienda__productos__price US$: 66,5
+                    .tienda__productos__price.-dark club: US$: 46,55
+          .col-xs-24.col-md-12
+            .tienda__productos__wrapper
+              .tienda__productos__logo
+                img(src="/images/shop/pontetorto.png")
+              .tienda__productos__container-top
+                .tienda__productos__image
+                  img(src="/images/shop/prod-2.png")
+              .tienda__productos__container-bottom
+                .tienda__productos__content
+                  h2.tienda__productos__title camiseta ares
+                  h3.tienda__productos__subtitle Ansilta - Aguas Arriba
+                  p.tienda__productos__text Interior de abrigo medio, pensado para actividades físicas en las que se puede desempeñar como unica prenda o como camiseta interior. Seca rápido. Libertad de movimiento, regulación térmica óptima del cuerpo. Tejido POLARTEC&reg; Power Dry&reg; Midweight.
+                .tienda__productos__group
+                  .tienda__productos__group-container
+                    .tienda__productos__price AR$: 2400
+                    .tienda__productos__price.-dark club: ar$: 1680
+                  .tienda__productos__group-container
+                    .tienda__productos__price US$: 66,5
+                    .tienda__productos__price.-dark club: US$: 46,55
+          .col-xs-24.col-md-12
+            .tienda__productos__wrapper
+              .tienda__productos__logo
+                img(src="/images/shop/polartec.png")
+              .tienda__productos__container-top
+                .tienda__productos__image
+                  img(src="/images/shop/prod-3.png")
+              .tienda__productos__container-bottom
+                .tienda__productos__content
+                  h2.tienda__productos__title camiseta ares
+                  h3.tienda__productos__subtitle Ansilta - Aguas Arriba
+                  p.tienda__productos__text Interior de abrigo medio, pensado para actividades físicas en las que se puede desempeñar como unica prenda o como camiseta interior. Seca rápido. Libertad de movimiento, regulación térmica óptima del cuerpo. Tejido POLARTEC&reg; Power Dry&reg; Midweight.
+                .tienda__productos__group
+                  .tienda__productos__group-container
+                    .tienda__productos__price AR$: 2400
+                    .tienda__productos__price.-dark club: ar$: 1680
+                  .tienda__productos__group-container
+                    .tienda__productos__price US$: 66,5
+                    .tienda__productos__price.-dark club: US$: 46,55
+          .col-xs-24.col-md-12
+            .tienda__productos__wrapper
+              .tienda__productos__logo
+                img(src="/images/shop/goretex.png")
+              .tienda__productos__container-top
+                .tienda__productos__image
+                  img(src="/images/shop/prod-4.png")
+              .tienda__productos__container-bottom
+                .tienda__productos__content
+                  h2.tienda__productos__title camiseta ares
+                  h3.tienda__productos__subtitle Ansilta - Aguas Arriba
+                  p.tienda__productos__text Interior de abrigo medio, pensado para actividades físicas en las que se puede desempeñar como unica prenda o como camiseta interior. Seca rápido. Libertad de movimiento, regulación térmica óptima del cuerpo. Tejido POLARTEC&reg; Power Dry&reg; Midweight.
+                .tienda__productos__group
+                  .tienda__productos__group-container
+                    .tienda__productos__price AR$: 2400
+                    .tienda__productos__price.-dark club: ar$: 1680
+                  .tienda__productos__group-container
+                    .tienda__productos__price US$: 66,5
+                    .tienda__productos__price.-dark club: US$: 46,55
+          .col-xs-24
+            a.tienda__productos__button(href="/tienda-pedido") realizar pedido
+    section.tienda__interstitial
+      p.tienda__interstitial__text
+        span.-dark El 5% de lo recaudado por las ventas, 
+        |será destinado a organizaciones vinculadas con la preservación y protección de ríos y peces.
