--- a/src/academia/index.jade
+++ b/src/academia/index.jade
@@ -5,4 +5,33 @@ block config
   - var baseUrl = '../'
 
 block content
-  p academia page
+  main.academia
+    section.academia__hero
+      .academia__hero__background
+        img(src="/images/academia/hero.jpg")
+      .academia__hero__container
+        .academia__hero__wrapper
+          h2.academia__hero__title academia internacional de pesca con mosca aguas arriba latinoamérica
+          .academia__hero__video
+            iframe(src="https://www.youtube.com/embed/DQuhA5ZCV9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+    section.academia__about
+      .academia__about__paises
+        img(src="/images/academia/line.png")
+      .container.academia__about__container
+          .row
+              .col-xs-24.col-md-10
+                  h3.academia__about__title Ya es hora de comenzar a difundir la pesca con mosca en Latinoamérica para que más pescadores lleguen a ella de forma fácil y divertida, anímate a capturar un pez con un anzuela emplumado, descubre la entimología, lectura de aguas, moscas y el fly casting!
+                  p.academia__about__text El mundo esta cambiando, necesitamos proteger el medio ambiente, nuestra misión es brindar herramientas y crear consciencia sobre la posibilidad de pescar y devolver los peses nativos, posiblemente sea la priemra sensación única, e indescriptible.
+                  p.academia__about__text Pablo Rodrigo Pérez junto a nuestro equipo viajará personalmente hasta tu país para brindar la Clínica Integral de Pesca con Mosca, llevaremos a los pescadores desde el nivel cero hasta lograr su primer pez.
+      .academia__about__image
+          img(src="/images/academia/middle.png")
+    section.academia__interstitial
+      .container
+        .row
+          .col-xs-24
+            p.academia__interstitial__text
+              span nuestros embajadores 
+              |en cada pais que visitaremos
+          .col-xs-12.col-md-6
+            .academia__insterstitial__wrapper
+              img(src="/images/academia/peru.jpg")
