--- a/src/tienda/index.jade
+++ b/src/tienda/index.jade
@@ -11,7 +11,7 @@ block content
       .tienda__hero__container
         .tienda__hero__wrapper
           .tienda__hero__logo
-            img(src="/images/sponsor/ansilta.png")
+            img(src="/images/shop/ansilta-big.png")
           p.tienda__hero__text Estamos orgullosos de recibir a Ansilta como nuevo socio de Aguas Arriba. Esta producción de indumentaria conjunta, es una primera prueba piloto para ARG. Ojalá tengamos el apoyo de todos ustedes para poder llegar a toda Latinoamérica con nuestros productos.
     section.tienda__productos
       .container
@@ -44,16 +44,16 @@ block content
                   img(src="/images/shop/prod-2.png")
               .tienda__productos__container-bottom
                 .tienda__productos__content
-                  h2.tienda__productos__title camiseta ares
+                  h2.tienda__productos__title buzo primo 2
                   h3.tienda__productos__subtitle Ansilta - Aguas Arriba
-                  p.tienda__productos__text Interior de abrigo medio, pensado para actividades físicas en las que se puede desempeñar como unica prenda o como camiseta interior. Seca rápido. Libertad de movimiento, regulación térmica óptima del cuerpo. Tejido POLARTEC&reg; Power Dry&reg; Midweight.
+                  p.tienda__productos__text Ideal para viaje, trabajo o trvesía. Funciona como prenda de abrigo exterior en días templados sonre una prenda liviana. Bajo peso. Alta capacidad de abrigo y transpirabilidad. Tejido PONTETORO&reg; Tecnopile Supremicro.
                 .tienda__productos__group
                   .tienda__productos__group-container
-                    .tienda__productos__price AR$: 2400
-                    .tienda__productos__price.-dark club: ar$: 1680
+                    .tienda__productos__price AR$: 2800
+                    .tienda__productos__price.-dark club: ar$: 1960
                   .tienda__productos__group-container
-                    .tienda__productos__price US$: 66,5
-                    .tienda__productos__price.-dark club: US$: 46,55
+                    .tienda__productos__price US$: 77,5
+                    .tienda__productos__price.-dark club: US$: 54,25
           .col-xs-24.col-md-12
             .tienda__productos__wrapper
               .tienda__productos__logo
@@ -63,16 +63,16 @@ block content
                   img(src="/images/shop/prod-3.png")
               .tienda__productos__container-bottom
                 .tienda__productos__content
-                  h2.tienda__productos__title camiseta ares
+                  h2.tienda__productos__title camiseta neyün 2
                   h3.tienda__productos__subtitle Ansilta - Aguas Arriba
-                  p.tienda__productos__text Interior de abrigo medio, pensado para actividades físicas en las que se puede desempeñar como unica prenda o como camiseta interior. Seca rápido. Libertad de movimiento, regulación térmica óptima del cuerpo. Tejido POLARTEC&reg; Power Dry&reg; Midweight.
+                  p.tienda__productos__text Interior de abrigo, diseñado para todo tipo de actividades aeróbicas. Exvelente adaptabilidad y bajo peso. Seca rápido. Libertad de movimiento, regulación térmica óptima del cuerpo. Tejido POLARTEC&reg; Power Dry&reg; Combinados Heavy/Midweight.
                 .tienda__productos__group
                   .tienda__productos__group-container
-                    .tienda__productos__price AR$: 2400
-                    .tienda__productos__price.-dark club: ar$: 1680
+                    .tienda__productos__price AR$: 2800
+                    .tienda__productos__price.-dark club: ar$: 1960
                   .tienda__productos__group-container
-                    .tienda__productos__price US$: 66,5
-                    .tienda__productos__price.-dark club: US$: 46,55
+                    .tienda__productos__price US$: 77,5
+                    .tienda__productos__price.-dark club: US$: 54,25
           .col-xs-24.col-md-12
             .tienda__productos__wrapper
               .tienda__productos__logo
@@ -82,16 +82,16 @@ block content
                   img(src="/images/shop/prod-4.png")
               .tienda__productos__container-bottom
                 .tienda__productos__content
-                  h2.tienda__productos__title camiseta ares
+                  h2.tienda__productos__title campera ghost 3
                   h3.tienda__productos__subtitle Ansilta - Aguas Arriba
-                  p.tienda__productos__text Interior de abrigo medio, pensado para actividades físicas en las que se puede desempeñar como unica prenda o como camiseta interior. Seca rápido. Libertad de movimiento, regulación térmica óptima del cuerpo. Tejido POLARTEC&reg; Power Dry&reg; Midweight.
+                  p.tienda__productos__text Campera para actividades donde se requiera bajo peso, transportabilidad e impermeabilidad. Infaltable en la mochila o riñonera a la hora de salir de travesía. Confeccionado en GORE-TEX&reg; 3C CKNIT, tejido extremadamente liviano.
                 .tienda__productos__group
                   .tienda__productos__group-container
-                    .tienda__productos__price AR$: 2400
-                    .tienda__productos__price.-dark club: ar$: 1680
+                    .tienda__productos__price AR$: 9500
+                    .tienda__productos__price.-dark club: ar$: 6650
                   .tienda__productos__group-container
-                    .tienda__productos__price US$: 66,5
-                    .tienda__productos__price.-dark club: US$: 46,55
+                    .tienda__productos__price US$: 263,95
+                    .tienda__productos__price.-dark club: US$: 184,95
           .col-xs-24
             a.tienda__productos__button(href="/tienda-pedido") realizar pedido
     section.tienda__interstitial
