--- a/src/_styles/_pages.scss
+++ b/src/_styles/_pages.scss
@@ -2,5 +2,7 @@
 @import './pages/programas';
 @import './pages/club';
 @import './pages/travel';
+@import './pages/academia';
 @import './pages/tienda';
+@import './pages/tienda-pedido';
 @import './pages/agradecimiento';
