--- a/src/_styles/pages/tienda-pedido.scss
+++ b/src/_styles/pages/tienda-pedido.scss
@@ -1,4 +1,4 @@
-.tienda {
+.tienda-pedido {
   &__hero {
     position: relative;
     height: 100vh;
@@ -60,7 +60,7 @@
       color: $white;
 
       @include mq(md) {
-        width: 60%;
+        width: 40%;
         position: relative;
         height: auto;
       }
@@ -74,7 +74,7 @@
       width: 90%;
 
       @include mq(md) {
-        width: 40%;
+        width: 60%;
       }
 
       img {
@@ -91,12 +91,15 @@
         font-size: 18px;
       }
     }
-  }
+  }  
 
-  &__productos {
+  &__form {
+    position: relative;
+    margin-top: -150px;
+    z-index: 3;
     
     @include mq(md) {
-      margin-top: -300px;
+      margin-top: -400px;
     }
 
     &__wrapper {
@@ -115,8 +118,7 @@
       width: 15%;
 
       @include mq(md) {
-        width: 10%;
-
+        // width: 10%;
       }
 
       img {
@@ -128,14 +130,14 @@
     &__container-top {
       width: 100%;
       border: 5px solid $white;
-      padding-bottom: 60%;
+      padding-bottom: 100%;
       height: 0;
       background: url('/images/shop/product-bg-1.jpg') no-repeat center center / cover;
       position: relative;
     }
 
     &__image {
-      height: 130%;
+      height: 90%;
       width: auto;
       position: absolute;
       left: 50%;
@@ -150,25 +152,11 @@
 
     &__content {
       text-align: center;
-      padding: 20px;
+      padding: 20px 10px 10px 10px;
+      color: $blue;
 
       @include mq(md) {
-        padding: 40px;
-      }
-    }
-
-    &__group {
-      display: flex;
-    }
-
-    &__group-container {
-      width: 50%;
-      text-align: center;
-      padding: 20px 0;
-      border-top: 1px solid $blueGray;
-      
-      &:first-child {
-        border-right: 1px solid $blueGray;
+        padding: 20px 10px 10px 10px;
       }
     }
 
@@ -178,6 +166,7 @@
       margin-bottom: 10px;
       font-weight: 600;
       font-size: 24px;
+      margin-top: 0;
     }
 
     &__subtitle {
@@ -187,63 +176,69 @@
       margin-bottom: 20px;
     }
 
-    &__text {
-      font-size: 16px;
-    }
-
     &__price {
       text-transform: uppercase;
+      margin-bottom: 20px;
+    }
+
+    &__select {
+      width: 100%;
+      height: 50px;
+      padding-left: 15px;
+      text-transform: uppercase;
+      border: 1px solid $blue;
+      outline: none;
+    }
+
+    &__container {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 90%;
+
+      @include mq(md) {
+        width: 65%;
+      }
+    }
+
+    &__container-text {
+      color: $blue;
+      text-align: center;
+      font-weight: 600;
+      margin-bottom: 20px;
+      margin-top: 0;
+    }
+
+    &__input-group {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 40px;
+    }
+
+    &__container-group {
+      &:first-child {
+        margin-right: 40px;
+      }
     }
 
     &__button {
       display: block;
       text-align: center;
       border: 1px solid $blue;
-      color: $blue;
+      color: $white;
       text-transform: uppercase;
       font-size: 18px;
       font-weight: 600;
       padding: 20px 0;
       margin-bottom: 60px;
+      outline: none;
+      background: $blue;
+      width: 100%;
+
       @include mq(md) {
-        width: 300px;  
+        width: 200px;  
         margin-left: auto;
         margin-right: auto;
-      }
-    }
-  }
-
-  &__interstitial {
-    background-color: $blue;
-    padding: 100px 0;
-    text-align: center;
-    position: relative;
-
-    &:after {
-      content: '';
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      opacity: .3;
-      background: url("/images/shop/interstitial.jpg") no-repeat center bottom / cover;
-      mix-blend-mode: overlay;
-    }
-
-    &__text {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 0;
-      margin-bottom: 0;
-      color: $white;
-      width: 80%;
-      font-size: 22px;
-
-      @include mq(md) {
-        width: 60%;
-        font-size: 26px;
       }
     }
   }
