--- a/src/programas/index.jade
+++ b/src/programas/index.jade
@@ -9,13 +9,71 @@ block content
     section.programas__hero
       .programas__hero__background
         img(src="/images/programas/hero.jpg")
-      .programas__hero__container
+      .programas__hero__container#video
           .programas__hero__wrapper
               .programas__hero__video
-                  iframe(src="https://www.youtube.com/embed/DQuhA5ZCV9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                  iframe(src="https://www.youtube.com/embed/DQuhA5ZCV9M" allowfullscreen)
               .programas__hero__video-information
                 h3.programas__hero__video-title programa #16
-                p.programas__hero__video-te Pescando en Florencia, Santa Fé
+                p.programas__hero__video-text Pescando en Florencia, Santa Fé
+          .container
+            .row
+              .col-xs-24
+                .programas__hero__tabs
+                  a(href="#").programas__hero__tab.-active
+                    p temporada 2018
+                  a(href="#").programas__hero__tab
+                    p temporadas anteriores
+              .col-xs-24
+                .row.programas__hero__videos-container
+                  //- .col-xs-12.col-md-6
+                  //-   a.programas__hero__programa(href="#video")
+                  //-     .programas__hero__programa-video
+                  //-       iframe(src="https://www.youtube.com/embed/DQuhA5ZCV9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                  //-     .programas__hero__programa-title programa #16
+                  //-     .programas__hero__programa-text Pesacando el Río Rivadavia
+                  //- .col-xs-12.col-md-6
+                  //-   a.programas__hero__programa(href="#video")
+                  //-     .programas__hero__programa-video
+                  //-       iframe(src="https://www.youtube.com/embed/DQuhA5ZCV9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                  //-     .programas__hero__programa-title programa #16
+                  //-     .programas__hero__programa-text Pesacando el Collón Curá en Junín de los Andes
+                  //- .col-xs-12.col-md-6
+                  //-   a.programas__hero__programa(href="#video")
+                  //-     .programas__hero__programa-video
+                  //-       iframe(src="https://www.youtube.com/embed/DQuhA5ZCV9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                  //-     .programas__hero__programa-title programa #16
+                  //-     .programas__hero__programa-text Pesacando el Río Rivadavia
+                  //- .col-xs-12.col-md-6
+                  //-   a.programas__hero__programa(href="#video")
+                  //-     .programas__hero__programa-video
+                  //-       iframe(src="https://www.youtube.com/embed/DQuhA5ZCV9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                  //-     .programas__hero__programa-title programa #16
+                  //-     .programas__hero__programa-text Pesacando el Río Rivadavia
+                  //- .col-xs-12.col-md-6
+                  //-   a.programas__hero__programa(href="#video")
+                  //-     .programas__hero__programa-video
+                  //-       iframe(src="https://www.youtube.com/embed/DQuhA5ZCV9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                  //-     .programas__hero__programa-title programa #16
+                  //-     .programas__hero__programa-text Pesacando el Río Rivadavia
+                  //- .col-xs-12.col-md-6
+                  //-   a.programas__hero__programa(href="#video")
+                  //-     .programas__hero__programa-video
+                  //-       iframe(src="https://www.youtube.com/embed/DQuhA5ZCV9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                  //-     .programas__hero__programa-title programa #16
+                  //-     .programas__hero__programa-text Pesacando el Río Rivadavia
+                  //- .col-xs-12.col-md-6
+                  //-   a.programas__hero__programa(href="#video")
+                  //-     .programas__hero__programa-video
+                  //-       iframe(src="https://www.youtube.com/embed/DQuhA5ZCV9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                  //-     .programas__hero__programa-title programa #16
+                  //-     .programas__hero__programa-text Pesacando el Río Rivadavia
+                  //- .col-xs-12.col-md-6
+                  //-   a.programas__hero__programa(href="#video")
+                  //-     .programas__hero__programa-video
+                  //-       iframe(src="https://www.youtube.com/embed/DQuhA5ZCV9M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                  //-     .programas__hero__programa-title programa #16
+                  //-     .programas__hero__programa-text Pesacando el Río Rivadavia
     section.programas__interstitial
       .container.programas__interstitial__container
         .row
