--- a/src/academia/index.jade
+++ b/src/academia/index.jade
@@ -27,12 +27,32 @@ block content
           img(src="/images/academia/middle.png")
     section.academia__interstitial
       .container
-        .row
-          .col-xs-24
-            p.academia__interstitial__text
-              span nuestros embajadores 
-              |en cada pais que visitaremos
-          .col-xs-12.col-md-6
-            .academia__insterstitial__wrapper
+        p.academia__interstitial__text
+          span nuestros embajadores 
+          |en cada pais que visitaremos
+        .academia__interstitial__container
+          .academia__interstitial__wrapper
+            .academia__interstitial__flag
               img(src="/images/academia/peru.jpg")
-              
+            p.academia__interstitial__name Rodolfo leon
+            p.academia__interstitial__email flyfishingperu@outlook.com 
+          .academia__interstitial__wrapper
+            .academia__interstitial__flag
+              img(src="/images/academia/peru.jpg")
+            p.academia__interstitial__name Rodolfo leon
+            p.academia__interstitial__email flyfishingperu@outlook.com 
+          .academia__interstitial__wrapper
+            .academia__interstitial__flag
+              img(src="/images/academia/peru.jpg")
+            p.academia__interstitial__name Rodolfo leon
+            p.academia__interstitial__email flyfishingperu@outlook.com 
+          .academia__interstitial__wrapper
+            .academia__interstitial__flag
+              img(src="/images/academia/peru.jpg")
+            p.academia__interstitial__name Rodolfo leon
+            p.academia__interstitial__email flyfishingperu@outlook.com 
+          .academia__interstitial__wrapper
+            .academia__interstitial__flag
+              img(src="/images/academia/peru.jpg")
+            p.academia__interstitial__name Rodolfo leon
+            p.academia__interstitial__email flyfishingperu@outlook.com 
