--- a/src/_styles/pages/academia.scss
+++ b/src/_styles/pages/academia.scss
@@ -239,22 +239,38 @@
       }
     }
 
-    &__button {
-      display: block;
-      z-index: 2;
-      position: relative;
-      border: 1px solid $white;
-      text-transform: uppercase;
-      font-weight: 600;
-      padding: 10px 30px;
-      color: $white;
-      font-size: 14px;
+    &__container {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    &__wrapper {
+      width: 50%;
+
+      @include mq(md) {
+        width: 20%;
+      }
+    }
+
+    &__flag {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
       margin-left: auto;
       margin-right: auto;
-      
-      @include mq(md) {
-        width: 35%;
-      }
+      display: block;
+    }
+
+    &__name {
+      font-weight: 600;
+      text-align: center;
+      color: $white;
+      font-size: 20px;
+    }
+
+    &__email {
+      text-align: center;
+      color: $white;
     }
   }
 }
